--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.2.0 + 版本的配置文件
-# 2022年10月22日 01:30 UTC/GMT +8
+# 2022年10月22日 02:14 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -159,11 +159,10 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
-# 微软、电报、贝宝、多邻国及 TikTok可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
+# 微软、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Duolingo.list, policy=国际代理, tag=Duolingo, enabled=true
 #https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 # 必须规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
