--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.2.0 + 版本的配置文件
-# 2022年10月22日 02:14 UTC/GMT +8
+# 2023年05月31日 00:30 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -43,12 +43,12 @@ Dler Cloud = https://dler.cloud/subscribe/XXXXXX?mu=smart,udp=true,fast-open=tru
 # NameKeyword: 根据提供的关键词对订阅中所有节点的名称进行筛选，使用筛选后的节点。
 # NameRegex: 根据提供的正则表达式对订阅中所有节点的名称进行筛选，使用筛选后的节点。
 # 根据自己机场及想用的节点进行删改，如想过滤 “香港 IPLC”，请修改 FilterKey 为 “.*香港 IPLC”
-Dler Cloud - HK = NameRegex,Dler Cloud,FilterKey = .*(香港|Hong Kong|HK|hk)
-Dler Cloud - TW = NameRegex,Dler Cloud,FilterKey = .*(台湾|Taiwan|TW|tw|台北)
-Dler Cloud - SG = NameRegex,Dler Cloud,FilterKey = .*(新加坡|Singapore|SG|sg)
-Dler Cloud - JP = NameRegex,Dler Cloud,FilterKey = .*(日本|Japan|JP|jp)
-Dler Cloud - KR = NameRegex,Dler Cloud,FilterKey = .*(韩国|Korea|KR|kr)
-Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us)
+HK = NameRegex, FilterKey = .*(香港|Hong Kong|HK|hk)
+TW = NameRegex, FilterKey = .*(台湾|Taiwan|TW|tw|台北)
+SG = NameRegex, FilterKey = .*(新加坡|Singapore|SG|sg)
+JP = NameRegex, FilterKey = .*(日本|Japan|JP|jp)
+KR = NameRegex, FilterKey = .*(韩国|Korea|KR|kr)
+US = NameRegex, FilterKey = .*(美国|United States|US|us)
 
 [Proxy Group]
 # 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Microsoft / Telegram / PayPal / TikTok 规则及策略，如需使用请取消 # 备注，并修改 [Remote Rule] 位置策略名与之对应，或取消对应规则前的 # 备注
@@ -64,6 +64,7 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
+#ChatGPT = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Color/OpenAI-3.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 #国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
@@ -71,13 +72,13 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # 注意下方的 Dler Cloud 名称，如有不使用的国家/地区节点策略组，请在上方规则策略组中一并删除相关节点策略组
-自动选择 = fallback,Dler Cloud - HK,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
-香港节点 = fallback,Dler Cloud - HK,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-台湾节点 = fallback,Dler Cloud - TW,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-新加坡节点 = fallback,Dler Cloud - SG,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-日本节点 = fallback,Dler Cloud - JP,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-韩国节点 = fallback,Dler Cloud - KR,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
-美国节点 = fallback,Dler Cloud - US,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+自动选择 = fallback,HK,TW,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
+香港节点 = fallback,HK,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+台湾节点 = fallback,TW,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+新加坡节点 = fallback,SG,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+日本节点 = fallback,JP,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+韩国节点 = fallback,KR,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+美国节点 = fallback,US,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
 
 # 为了与 Proxy 策略名称保持一致
 直连 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
@@ -159,8 +160,9 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
-# 微软、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
+# 微软、ChatGPT、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/ChatGPT.list, policy=国际代理, tag=ChatGPT, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
 #https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
@@ -208,7 +210,7 @@ http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positiv
 # 如想更换 TikTok 区域，直接修改下方链接中 TikTokKR 为 TikTokJP / TikTokTW / TikTokUS 即可
 #https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTokKR.plugin, policy=国际抖音, tag=TikTok Unlock
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/bilibili.plugin, tag=Bilibili Adblock, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.lnplugin, tag=Zhihu Adblock, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.lnplugin, tag=Zhihu Zheye, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.plugin, tag=Stick Rules for Rewrite, enabled=true
 
 [MITM]
