--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.2.0 + 版本的配置文件
-# 2023年05月31日 00:30 UTC/GMT +8
+# 2023年09月12日 17:30 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -51,7 +51,7 @@ KR = NameRegex, FilterKey = .*(韩国|Korea|KR|kr)
 US = NameRegex, FilterKey = .*(美国|United States|US|us)
 
 [Proxy Group]
-# 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Microsoft / Telegram / PayPal / TikTok 规则及策略，如需使用请取消 # 备注，并修改 [Remote Rule] 位置策略名与之对应，或取消对应规则前的 # 备注
+# 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Microsoft / OpenAI / Telegram / PayPal / TikTok 规则及策略，如需使用请取消 # 备注，并修改 [Remote Rule] 位置策略名与之对应，或取消对应规则前的 # 备注
 广告拦截 = select,拦截,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 国际代理 = select,自动选择,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 大陆网络 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
@@ -64,7 +64,7 @@ US = NameRegex, FilterKey = .*(美国|United States|US|us)
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-#ChatGPT = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Color/OpenAI-3.png
+#OpenAI = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/GeQ1an/Rules/master/Images/Icons/Policies/OpenAI.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 #国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
@@ -160,9 +160,9 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
-# 微软、ChatGPT、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
+# 微软、OpenAI、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/ChatGPT.list, policy=国际代理, tag=ChatGPT, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/OpenAI.list, policy=国际代理, tag=OpenAI, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
 #https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
