--- a/Clash/Clash.yaml
+++ b/Clash/Clash.yaml
@@ -1,4 +1,4 @@
-# 2023年05月31日 00:30 UTC/GMT +8
+# 2023年09月12日 17:36 UTC/GMT +8
 
 port: 7890
 socks-port: 7891
@@ -266,6 +266,13 @@ proxy-groups:
 #    proxies:
 #      - 🎥 国际媒体
 #      - ⭕️ 直连
+#  - name: "🔖 OpenAI"
+#    type: select
+#    proxies:
+#      - ✈️ 国际代理
+#      - 🇺🇸 美国节点
+#      - 🇯🇵 日本节点
+#      - 🇸🇬 新加坡节点
 #  - name: "📡 电报服务"
 #    type: select
 #    proxies:
@@ -647,11 +654,11 @@ rule-providers:
     url: https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml
     path: ./Rules/Microsoft.yaml
     interval: 86400
-  ChatGPT:
+  OpenAI:
     type: http
     behavior: classical
-    url: https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/ChatGPT.yaml
-    path: ./Rules/ChatGPT.yaml
+    url: https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/OpenAI.yaml
+    path: ./Rules/OpenAI.yaml
     interval: 86400
   Steam:
     type: http
@@ -742,7 +749,7 @@ rules:
   - RULE-SET,Apple,🍏 苹果服务
   # 电报、微软、贝宝及 Steam 可选规则，如需为某个规则列表单独设置策略，请直接修改策略名称与上方策略组名称保持一致
   - RULE-SET,Microsoft,🥏 大陆网络
-  - RULE-SET,ChatGPT,✈️ 国际代理
+  - RULE-SET,OpenAI,✈️ 国际代理
   - RULE-SET,Telegram,✈️ 国际代理
   - RULE-SET,PayPal,✈️ 国际代理
 #  - RULE-SET,Steam,🎮 蒸汽游戏
