--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.2.0 + 版本的配置文件
-# 2023年09月12日 17:30 UTC/GMT +8
+# 2024年05月29日 22:00 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -25,7 +25,7 @@ ssid-trigger = "default":RULE, "cellular":RULE, "Stick":DIRECT, "Stick-5G":PROXY
 # 使用真实 IP
 real-ip = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, global.turn.twilio.com, global.stun.twilio.com, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, opencloud.wostore.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *.cmbchina.com.cn, *?miwifi.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, time.*.apple.com, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*
 # 解析器
-resource-parser = https://raw.githubusercontent.com/peng-ym/sub-store/master/backend/dist/sub-store-parser.loon.min.js
+resource-parser = https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store.min.js
 
 [Proxy]
 # 内置 DIRECT、REJECT 策略
@@ -67,7 +67,7 @@ US = NameRegex, FilterKey = .*(美国|United States|US|us)
 #OpenAI = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/GeQ1an/Rules/master/Images/Icons/Policies/OpenAI.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-#国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+#国际抖音 = select,国际代理,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 网速测试 = select,直连,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
@@ -165,7 +165,7 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Mi
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/OpenAI.list, policy=国际代理, tag=OpenAI, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
-#https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
+#https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Surge/TikTok/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 # 必须规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=国际代理, tag=Proxy, enabled=true
@@ -205,10 +205,6 @@ http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/w
 http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 [Plugin]
-# 默认未启用 TikTok 解锁插件，如需启用请一并启用 TikTok 规则及策略组
-# 详细使用说明至 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看
-# 如想更换 TikTok 区域，直接修改下方链接中 TikTokKR 为 TikTokJP / TikTokTW / TikTokUS 即可
-#https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTokKR.plugin, policy=国际抖音, tag=TikTok Unlock
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/bilibili.plugin, tag=Bilibili Adblock, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.lnplugin, tag=Zhihu Zheye, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.plugin, tag=Stick Rules for Rewrite, enabled=true
