--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.32 正式版制作
 #
-# 2023年09月12日 17:30 UTC/GMT +8
+# 2024年05月29日 22:00 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间
@@ -38,7 +38,7 @@ doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-# 默认注释网易云音乐（包含在 CMedia 内）、Apple Music/Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、ChatGPT/TikTok/Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
+# 默认注释网易云音乐（包含在 CMedia 内）、Apple Music/Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、ChatGPT/Telegram/PayPal（包含在 Outside 内）、TikTok（可能导致字节跳动部分国内服务无法正常使用）微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 # 必须策略
 static = AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 static = Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
@@ -74,7 +74,7 @@ available = Korea, server-tag-regex=韩国|Korea|KR|kr, img-url=https://raw.gith
 订阅链接, tag=我的订阅, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/CrossWall.png, update-interval=43200, opt-parser=true, enabled=true
 
 [filter_remote]
-# 默认不启用网易云音乐（包含在 CMedia 内）、Apple Music/Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、ChatGPT/TikTok/Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）规则，如需使用请修改 false 为 true，对于完全不需要的规则，删除即可
+# 默认不启用网易云音乐（包含在 CMedia 内）、Apple Music/Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、ChatGPT/Telegram/PayPal（包含在 Outside 内）、TikTok（可能导致字节跳动部分国内服务无法正常使用）、微软（包含在 Mainland 内）规则，如需使用请修改 false 为 true，对于完全不需要的规则，删除即可
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Special.list, tag=Special (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Netease%20Music.list, tag=Netease Music (Stick Rules), update-interval=43200, enabled=false
@@ -98,9 +98,6 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainlan
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), update-interval=43200, enabled=true
 
 [rewrite_remote]
-# 默认未启用 TikTok 解锁订阅，如需使用请跳转到 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看详细使用说明
-# 如想更换 TikTok 区域，直接修改下方订阅中 -KR 为 -JP/-TW/-US 即可
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-KR.conf, tag=TikTok (Semporia), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/app2smile/rules/master/module/bilibili-qx.conf, tag=Bilibili Adblock (app2smile), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=Zhihu Zheye (blackmatrix7), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/TestFlightDownload.conf, tag=TFDownload (NobyDa), update-interval=43200, enabled=true
