--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,9 +1,10 @@
-# 适用于 Loon 2.2.0 + 版本的配置文件
-# 2024年05月29日 22:00 UTC/GMT +8
+# 适用于 Loon 3.2.3(755) + 版本的配置文件
+# 2024年11月16日 21:15 UTC/GMT +8
 
 [General]
-# IPv6 支持
-ipv6 = true
+# IP 请求模式
+## ipv4-only：仅请求 IPv4；dual：并发请求 IPv4&IPv6；ipv4-Preferred：优先请求 IPv4；ipv6-Preferred：优先请求 IPv6
+ip-mode = dual
 # 跳过某个域名或者IP段
 skip-proxy = localhost, *.local, passenger.t3go.cn, e.crashlytics.com, captive.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com, app.yinxiang.com, injections.adguard.org, local.adguard.org, cable.auth.com, *.id.ui.direct, www.baidu.com, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, mbank.psbc.com, ibfp.psbc.com, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.1/32, 169.254.0.0/16, 172.16.0.0/12, 192.168.0.0/16, 192.168.122.1/32, 193.168.0.1/32, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32, ::1/128, fc00::/7, fd00::/8, fe80::/10, ff00::/8, 2001::/32, 2001:db8::/32, 2002::/16, ::ffff:0:0:0:0/1, ::ffff:128:0:0:0/1
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
@@ -64,10 +65,10 @@ US = NameRegex, FilterKey = .*(美国|United States|US|us)
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-#OpenAI = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/GeQ1an/Rules/master/Images/Icons/Policies/OpenAI.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 #国际抖音 = select,国际代理,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+人工智能 = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/OpenAI.png
 网速测试 = select,直连,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
@@ -160,13 +161,13 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
-# 微软、OpenAI、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
+# 微软、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/OpenAI.list, policy=国际代理, tag=OpenAI, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
 #https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Surge/TikTok/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 # 必须规则列表
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/AI%20Suite.list, policy=人工智能, tag=AI Suite, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=国际代理, tag=Proxy, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
