Fix ChatGPT Icon

--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -66,9 +66,9 @@ US = NameRegex, FilterKey = .*(美国|United States|US|us)
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
-#贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+#贝宝服务 = select,国际代理,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 #国际抖音 = select,国际代理,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-人工智能 = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/OpenAI.png
+人工智能 = select,国际代理,美国节点,台湾节点,日本节点,韩国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ChatGPT.png
 网速测试 = select,直连,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
