--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 3.2.3(755) + 版本的配置文件
-# 2024年11月16日 21:15 UTC/GMT +8
+# 2024年11月17日 23:10 UTC/GMT +8
 
 [General]
 # IP 请求模式
@@ -159,7 +159,8 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Pornhub.list, policy=国际媒体, tag=Pornhub, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Soundcloud.list, policy=国际媒体, tag=Soundcloud, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
-# 苹果服务规则列表
+# 人工智能和苹果服务规则列表
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/AI%20Suite.list, policy=人工智能, tag=AI Suite, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
 # 微软、电报、贝宝及 TikTok 可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
@@ -167,7 +168,6 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Te
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=PayPal, enabled=true
 #https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Surge/TikTok/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
 # 必须规则列表
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/AI%20Suite.list, policy=人工智能, tag=AI Suite, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=国际代理, tag=Proxy, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
