--- a/Loon/Loon_old.conf
+++ b/Loon/Loon_old.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 3.2.3(755) + 版本的配置文件
-# 2024年11月22日 15:30 UTC/GMT +8
+# 2024年11月22日 23:38 UTC/GMT +8
 
 [General]
 # IP 请求模式
@@ -68,10 +68,11 @@ US = NameRegex, FilterKey = .*(美国|United States|US|us)
 国内媒体 = select,大陆网络,香港节点,台湾节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DomesticMedia.png
 国际媒体 = select,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
 #网易云音乐 = select,国内媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
-#网飞视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-#迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
-#声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
-#油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+#迪士尼+ = select,国际媒体,新加坡节点,香港节点,台湾节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
+#迈克斯 = select,国际媒体,新加坡节点,台湾节点,香港节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HBO_Max.png
+#网飞视频 = select,国际媒体,新加坡节点,香港节点,台湾节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
+#声田音乐 = select,国际媒体,新加坡节点,香港节点,台湾节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
+#油管视频 = select,国际媒体,新加坡节点,香港节点,台湾节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
 #电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
@@ -131,8 +132,9 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Youku.list, policy=国内媒体, tag=Youku, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/WeTV.list, policy=国内媒体, tag=WeTV, enabled=true
 # 国际媒体分组，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Netflix.list, policy=国际媒体, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Disney%20Plus.list, policy=国际媒体, tag=Disney Plus, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Max.list, policy=国际媒体, tag=Max, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Netflix.list, policy=国际媒体, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Spotify.list, policy=国际媒体, tag=Spotify, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/YouTube.list, policy=国际媒体, tag=YouTube, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/YouTube%20Music.list, policy=国际媒体, tag=YouTube Music, enabled=true
@@ -150,8 +152,6 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/F1%20TV.list, policy=国际媒体, tag=F1 TV, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%20Now.list, policy=国际媒体, tag=Fox Now, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Fox%2B.list, policy=国际媒体, tag=Fox+, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/HBO%20Go.list, policy=国际媒体, tag=HBO Go, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/HBO%20Max.list, policy=国际媒体, tag=HBO Max, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Hulu%20Japan.list, policy=国际媒体, tag=Hulu Japan, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Hulu.list, policy=国际媒体, tag=Hulu, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Japonx.list, policy=国际媒体, tag=Japonx, enabled=true
